--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="card-two">
           <div class="card-info">
             <img src="images/icon-suvs.svg" alt="SUV Clip Art" />
-            <h2>SUVs</h2>
+            <h2>SUVS</h2>
             <p>
               Take an SUV for its spacious interior, power, and versatility.
               Perfect for your next family vacation and off-road adventures.
